Finished media queries. Finished design.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div id="characteristic-grow-together" class="landing-app-characteristic">
       <img id="characteristic-bg-pattern-top-1" src="images/bg-section-top-mobile-1.svg" alt="top background pattern for characteristic section" />
-      <img id="characteristic-growing-img" src="images/illustration-grow-together.svg" alt="two users working together" />
+      <img id="characteristic-growing-img" class="landing-app-characteristic-hero-img" src="images/illustration-grow-together.svg" alt="two users working together" />
       <h2>Grow Together</h2>
       <div>
         Generate meaningful discussions with your audience and build a strong, loyal community. 
@@ -54,8 +54,8 @@
       </div>
       <img id="characteristic-bg-pattern-bottom-1" src="images/bg-section-bottom-mobile-1.svg" alt="bottom background pattern for characteristic section" />
     </div>
-    <div class="landing-app-characteristic">
-      <img id="characteristic-flowing-img" src="images/illustration-flowing-conversation.svg" alt="team of people conversing" /> 
+    <div id="characteristic-flowing-conversations" class="landing-app-characteristic">
+      <img id="characteristic-flowing-img" class="landing-app-characteristic-hero-img" src="images/illustration-flowing-conversation.svg" alt="team of people conversing" /> 
       <h2>Flowing Conversations</h2>
       <div>
         You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
@@ -64,7 +64,7 @@
     </div>
     <div id="characteristic-your-users" class="landing-app-characteristic">
       <img id="characteristic-bg-pattern-top-2" src="images/bg-section-top-mobile-2.svg" alt="top background pattern for section" />
-      <img id="characteristic-users-img" src="images/illustration-your-users.svg" alt="three users working" />
+      <img id="characteristic-users-img" class="landing-app-characteristic-hero-img" src="images/illustration-your-users.svg" alt="three users working" />
       <h2>Your Users</h2>
       <div>
         It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
@@ -73,7 +73,7 @@
       <img id="characteristic-bg-pattern-bottom-2" src="images/bg-section-bottom-mobile-2.svg" alt="bottom background pattern for section" /> 
     </div>
     <div class="landing-cta">
-      <h2>Ready To Build Your Community</h2>
+      <h2>Ready To Build Your Community?</h2>
       <a href="#signup">Get Started For Free</a>
     </div>
   </main>
